--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:theme="@style/Theme.Mobile_assignment"
         tools:targetApi="31">
         <activity
+            android:name=".LoginActiivty"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true"
-            >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
