--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Mobile_assignment"
         tools:targetApi="31">
         <activity
+            android:name=".LoginHome"
+            android:exported="false" />
+        <activity
             android:name=".Register"
             android:exported="false" />
         <activity
