Commit - Added new confirm popup + Firebase connection to project + RecyclerView using realtime database + Changed colours of the UI = Changed some class from Fragment to Activity = Removed navigation and used Intent instead
To do (Prio to less Prio)
1. Complete all function except history
2. history
3. UI layout improvements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".NutritionHistoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NutritionOptionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddCustomFoodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CaloriesSearchViewActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
