--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Mobile_assignment"
         tools:targetApi="31">
         <activity
+            android:name=".SleepHistory"
+            android:exported="false" />
+        <activity
+            android:name=".AddSleepFragment"
+            android:exported="false" />
+        <activity
             android:name=".Register"
             android:exported="false" />
         <activity
