wanna pull main code so commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:exported="false" />
         <activity
             android:name=".WaterReminderSettingsActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".Register"
             android:exported="false" />
         <activity
