--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,12 @@
         <activity
             android:name=".CaloriesSearchViewActivity"
             android:exported="false" />
+        <activity
+            android:name=".UpdateFoodSearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FoodDetailsActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
