add missing activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,11 @@
             android:name=".SleepHistory"
             android:exported="false" />
         <activity
-
             android:name=".WaterReminderSettingsActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".WaterHistoryActivity"
             android:exported="false"/>
 
         <activity
