--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobile_assignment"
         tools:targetApi="31">
+        <receiver
+            android:name=".WaterReminderReceiver"
+            android:enabled="true"
+            android:exported="false" />
         <activity
             android:name=".SleepHistory"
             android:exported="false" />
