moved workout file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,22 +50,22 @@
             android:name=".MainActivity"
             android:exported="true">
         </activity>
-        <activity android:name=".add_workout_activity"
+        <activity android:name=".workout.add_workout_activity"
             android:exported="true"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.Mobile_assignment"
             />
-        <activity android:name=".add_custom_exercise"
+        <activity android:name=".workout.add_custom_exercise"
             android:exported="true"
-            android:parentActivityName=".add_workout_activity"
+            android:parentActivityName=".workout.add_workout_activity"
             android:theme="@style/Theme.Mobile_assignment"
             />
-        <activity android:name=".activity_added_exercise"
+        <activity android:name=".workout.activity_added_exercise"
             android:exported="true"
-            android:parentActivityName=".add_custom_exercise"
+            android:parentActivityName=".workout.add_custom_exercise"
             android:theme="@style/Theme.Mobile_assignment"
             />
-        <activity android:name=".start_workout"
+        <activity android:name=".workout.start_workout"
             android:exported="true"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.Mobile_assignment"
