moved workout file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,10 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label=""
+        android:label="Fitness Buddy"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobile_assignment"
         tools:targetApi="31">
-        <activity
-            android:name=".SleepHistory"
-            android:exported="false" />
         <activity
             android:name=".WaterReminderSettingsActivity"
             android:exported="false"/>
@@ -22,9 +19,6 @@
             android:name=".WaterHistoryActivity"
             android:exported="false"/>
 
-        <activity
-            android:name=".AddSleepFragment"
-            android:exported="false" />
         <activity
             android:name=".Register"
             android:exported="false" />
