+Complete all necessary function including history credit to rx :)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobile_assignment"
         tools:targetApi="31">
-        <activity
-            android:name=".SleepHistory"
-            android:exported="false" />
+
         <activity
             android:name=".WaterReminderSettingsActivity"
             android:exported="false"/>
@@ -22,9 +20,7 @@
             android:name=".WaterHistoryActivity"
             android:exported="false"/>
 
-        <activity
-            android:name=".AddSleepFragment"
-            android:exported="false" />
+
         <activity
             android:name=".Register"
             android:exported="false" />
@@ -72,22 +68,31 @@
             />
         <activity
             android:name=".NutritionHistoryActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".NutritionOptionActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".AddCustomFoodActivity"
+            android:parentActivityName=".NutritionOptionActivity"
             android:exported="false" />
         <activity
             android:name=".CaloriesSearchViewActivity"
+            android:parentActivityName=".NutritionOptionActivity"
             android:exported="false" />
         <activity
             android:name=".UpdateFoodSearchActivity"
+            android:parentActivityName=".NutritionOptionActivity"
             android:exported="false" />
         <activity
             android:name=".FoodDetailsActivity"
+            android:parentActivityName=".UpdateFoodSearchActivity"
             android:exported="false" />
+
+
+
     </application>
 
 </manifest>
